RESOLVED FIXED251145
[GStreamer][WebRTC] Missing null/zero checks in 1.22 code paths
https://bugs.webkit.org/show_bug.cgi?id=251145
Summary [GStreamer][WebRTC] Missing null/zero checks in 1.22 code paths
Philippe Normand
Reported 2023-01-25 04:50:40 PST
ssia
Attachments
Philippe Normand
Comment 1 2023-01-25 05:21:11 PST
EWS
Comment 2 2023-01-27 02:30:36 PST
Committed 259473@main (e534395cf34a): <https://commits.webkit.org/259473@main> Reviewed commits have been landed. Closing PR #9100 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-01-27 02:31:17 PST
Note You need to log in before you can comment on or make changes to this bug.