Cherry-pick 259473@main (e534395cf34a). https://bugs.webkit.org/show_bug.cgi?id=251145

[GStreamer][WebRTC] Missing null/zero checks in 1.22 code paths
    https://bugs.webkit.org/show_bug.cgi?id=251145

    Reviewed by Xabier Rodriguez-Calvar.

    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
    (WebCore::GStreamerMediaEndpoint::addRemoteStream): The msid property can be null, so needs checking.
    (WebCore::GStreamerMediaEndpoint::requestAuxiliarySender): Remove auxiliary sender caching. This
    code is called once per transport stream, ownership of the sender is passed to the caller.

    Canonical link: https://commits.webkit.org/259473@main